# AltarServersJobs

./: jobs.json  main.old.py  main.py  objects.py  pyproject.toml  servers.json
data/story/: orginal.md  story.md
tools/: import_o.py  job_creator.py  server_creator.py
