[tool.poetry]
name = "altarserverjobs"
version = "0.1.0"
description = ""
authors = ["EpicGamerCodes <62027082+EpicGamerCodes@users.noreply.github.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
adaptiveui = {path = "E:/adaptiveui", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
